# Deepseek-Novel-Agent

./: .cargo-crap.toml  .gitattributes  .gitignore  Cargo.toml  FRAMEWORK.md  README.md  lcov.info
.cargo/: audit.toml  config.toml
.config/: nextest.toml
crates/novel-compaction/: Cargo.toml
crates/novel-compaction/src/: error.rs  level1.rs  level2.rs  lib.rs  message_format.rs  message_types.rs  react_cycles.rs  retain_policy.rs  session_rebuild.rs  strategy.rs  summarizer.rs  token_counter.rs
crates/novel-config/: Cargo.toml
crates/novel-config/src/: agent_config.rs  error.rs  fork_agents.rs  hook.rs  lib.rs  model.rs  paths.rs  project.rs
crates/novel-core/: Cargo.toml
crates/novel-core/src/: agent.rs  context.rs  context_ext.rs  dynamic_context.rs  engine.rs  error.rs  fork.rs  fork_stream_subs.rs  fork_transcript.rs  hooks.rs  interrupt.rs  interrupt_finalize.rs  lib.rs  llm_abort.rs  llm_stream_turn.rs  message_bridge.rs  messages.rs  prompt_loader.rs  session_llm.rs  session_todos.rs  stream_result_apply.rs  streaming_tool_dispatch.rs  subagent.rs  subagent_helpers.rs  subagent_llm_turn.rs  subagent_overflow.rs  subagent_react.rs  subagent_runner.rs  system_prompt.rs  test_env.rs  tool_stream_results.rs  turn.rs  turn_loop.rs  types.rs
crates/novel-core/src/agent/: catalog.rs  mod.rs  prompt.rs
crates/novel-core/src/context/: manager.rs  mod.rs  prompt_loader.rs  system_prompt.rs
crates/novel-core/src/context/dynamic_context/: frozen.rs  memory.rs  mod.rs  progress.rs  skills.rs
crates/novel-core/src/engine/: interruptible_status.rs  lifecycle.rs  mod.rs  prompt_permission.rs  run_loop.rs  session.rs  session_llm.rs  tests.rs  types.rs
crates/novel-core/src/interrupt/: abort_map.rs  controller.rs  finalize.rs  mod.rs
crates/novel-core/src/message/: convert.rs  display.rs  llm.rs  missing_blocks.rs  mod.rs  repair.rs  tool_pairs.rs  turn_rows.rs
crates/novel-core/src/permission/: mod.rs  mode_prompt.rs  resolve.rs  transition.rs
crates/novel-core/src/read_cache/: cutoff.rs  mod.rs  sync.rs  tests.rs
crates/novel-core/src/subagent/: fork.rs  fork_setup.rs  fork_transcript.rs  helpers.rs  llm_turn.rs  memory_extractor.rs  mod.rs  overflow.rs  params.rs  react.rs  runner.rs
crates/novel-core/src/turn/: context.rs  llm_stream.rs  mod.rs  todo_nudge.rs  tool_apply.rs  tool_dispatch.rs  tool_merge.rs
crates/novel-core/src/turn/loop/: compaction.rs  compaction_helpers.rs  inner_turn.rs  memory_prefetch_gate.rs  mod.rs  persistence.rs  tests.rs  turn_start.rs
crates/novel-core/tests/: live_invoke_skill_turn.rs
crates/novel-deepseek/: Cargo.toml  config.toml
crates/novel-deepseek/src/: cache.rs  client.rs  config.rs  connectivity.rs  error.rs  lib.rs  stream_parse.rs  tool_args.rs  types.rs
crates/novel-deepseek/tests/: connectivity.rs
crates/novel-knowledge/: Cargo.toml
crates/novel-knowledge/src/: audit_status.rs  causality.rs  character.rs  derive.rs  error.rs  evolution_log.rs  faction.rs  index.rs  lib.rs  parser.rs  project_tree.rs  prop.rs  regex_cache.rs  scaffold.rs  scaffold_templates.rs  scene.rs  skill_encyclopedia.rs  text_util.rs
crates/novel-logging/: Cargo.toml
crates/novel-logging/src/: audit.rs  lib.rs
crates/novel-memory/: Cargo.toml
crates/novel-memory/src/: frontmatter.rs  guard.rs  lib.rs  loading.rs  memory_extract.rs  memory_extract_prompt.rs  memory_scan.rs  memory_select.rs  memory_types.rs  prefetch.rs  selection.rs
crates/novel-server/: Cargo.toml
crates/novel-server/src/: app.rs  lib.rs
crates/novel-server/src/tauri/: dto.rs  engine_loop.rs  event_payload.rs  events.rs  mod.rs  session_api.rs  state.rs  stream_coalesce.rs
crates/novel-server/src/tauri/commands/: engine_ipc.rs  fork.rs  mod.rs  project.rs  session.rs  settings.rs  tests.rs  turn.rs
crates/novel-server/src/tauri/event_payload/: compaction.rs  mod.rs  status.rs  stream.rs  subagent.rs  tool.rs
crates/novel-skills/: Cargo.toml
crates/novel-skills/src/: error.rs  lib.rs  loader.rs  merger.rs
crates/novel-state/: Cargo.toml
crates/novel-state/src/: checkpoint.rs  db.rs  error.rs  fork.rs  lib.rs  message.rs  session.rs  todo.rs  turn_bounds.rs
crates/novel-state/src/db/: fork_runs.rs  messages.rs  metadata.rs  migrate.rs  mod.rs  read_cache.rs  sessions.rs  tests.rs
crates/novel-tools/: Cargo.toml
crates/novel-tools/src/: abort.rs  blocking.rs  context.rs  error.rs  executor.rs  lib.rs  paths.rs  permission.rs  read_cache.rs  read_cache_ingest.rs  read_cache_replay.rs  read_economy.rs  registry.rs  subagent_gate.rs  tests_extra.rs  tool_error_hints.rs  tool_result_format.rs  tool_result_middleware.rs  trait_def.rs
crates/novel-tools/src/builtin/: ask_user_question.rs  bash.rs  edit.rs  glob.rs  grep.rs  invoke_skill.rs  mod.rs  read.rs  tail.rs  todo_write.rs  web_search.rs  write.rs
crates/novel-tools/src/executor/: mod.rs  streaming.rs
crates/novel-tools/src/novel/: audit_status_query.rs  chapter_read.rs  character_rotate.rs  character_search.rs  common.rs  consistency_check.rs  corkboard.rs  foreshadow_tracker.rs  fork_sub_agent.rs  impact_analysis.rs  knowledge_derive.rs  mod.rs  plot_graph.rs  plot_grid.rs  relation_query.rs  stats.rs  tracking_query.rs  web_search.rs
docs/: README.md
prompt/: autonomous-writing.md  compaction-summary-trailing.md  permission-mode-enter.md  permission-mode-exit.md  system.md
scripts/: README.md  check.ps1  ci-check-node.sh  ci-clippy.sh  ci-crap.ps1  ci-crap.sh  ci-frontend.sh  ci-gate-core.sh  ci-lcov.ps1  ci-lcov.sh  ci-linux-tauri-deps.sh  ci-local.ps1  ci-nextest-env.sh  ci-pr-gate.sh  ci-require-toolchain.sh  ci-rust-gate.sh  ci-rust-static.sh  ci-rust-test.sh  ci-security-audit.sh  ci-tauri-check.sh  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.novel-agent/: state.db  state.db-shm  state.db-wal
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  events.rs  main.rs  state.rs
tests/integration/: Cargo.toml  boundary_conditions.rs  compaction_session.rs  fork_agent.rs  knowledge_workflow.rs  tool_execution.rs
(+288 files in other folders)
