[package]
name = "novel-compaction"
version.workspace = true
edition.workspace = true

[dependencies]
novel-config = { path = "../novel-config" }
novel-knowledge = { path = "../novel-knowledge" }
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
