[package]
name = "novel-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
novel-logging = { path = "../novel-logging" }
novel-compaction = { path = "../novel-compaction" }
novel-config = { path = "../novel-config" }
novel-knowledge = { path = "../novel-knowledge" }
novel-deepseek = { path = "../novel-deepseek" }
novel-skills = { path = "../novel-skills" }
novel-state = { path = "../novel-state" }
novel-tools = { path = "../novel-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
dashmap = "6"
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
novel-state = { path = "../novel-state" }
rstest = { workspace = true }
tempfile = { workspace = true }
