[package]
name = "novel-deepseek"
version.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true }
