[package]
name = "novel-knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
petgraph = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
