[package]
name = "novel-memory"
version.workspace = true
edition.workspace = true

[dependencies]
novel-config = { path = "../novel-config" }
novel-deepseek = { path = "../novel-deepseek" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
