[package]
name = "novel-state"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
